--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,6 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.5.2'
 
     implementation 'io.reactivex.rxjava2:rxkotlin:2.+'
+
+    implementation project(':core')
 }
